src/test/Success/test_sym3.c
int a;
int func(int x);

int main(){
    func(a);
}

int func(int x){

}