src/test/Fail/test_redec2.c
int func();
int func();

int main(){

}
int main(){

}

int func(){

}